--- a/views/creditrecordupdate.pug
+++ b/views/creditrecordupdate.pug
@@ -26,8 +26,8 @@ head
         a(href='/home')
           i.fas.fa-home
           |                         Home 
-      li.active       
-        a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
+      li        
+        a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
           |                           Purchases
         ul#purchaseSubmenu.collapse.list-unstyled
@@ -35,8 +35,8 @@ head
             a(href='/purchases') Purchase Form
           li            
             a(href='/purchaselist') Purchase Record           
-      li     
-        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' )
+      li.active     
+        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
           i.fas.fa-copy
           |                           Sales
         ul#saleSubmenu.collapse.list-unstyled
@@ -65,7 +65,8 @@ head
         a(href='/account')
           i.fas.fa-user
           |                         Account
-    ul.list-unstyled.CTAs 
+    ul.list-unstyled.CTAs      
+  
   // Page Content
   #content
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
@@ -77,9 +78,7 @@ head
             button.btn.btn-dark.d-inline-block.d-lg-none.ml-auto(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
               i.fas.fa-align-justify
           .col-md-10
-            h2(style='margin-left:15px;margin-top: 20px; color:#181553;')
-              | Karibu Groceries Ltd, PRODUCT
-              | PURCHASES. 
+            h2(style='margin-left:15px;margin-top: 20px; color:#181553;') Karibu Groceries Ltd, Credit Sales Records
         #navbarSupportedContent.collapse.navbar-collapse.col-md-1
           ul.nav.navbar-nav.ml-auto
             li.nav-item.active
@@ -90,81 +89,42 @@ head
         .col-md-12
           .main.custom1
             h2.txt1(style='font-size:45px;text-decoration: underline;')
-              | Supplier Purchases Record
-            .signup
-              form(method="POST" action="/purchaselist/edit?id="+user._id )
-                .row(onsubmit='')
-                  .col.col-md-6
-                    .align
-                      label.form-label KGL Branch:
-                      select(name='branch' )
-                        option(value=user.branch)
-                          | KGL Branch
-                        option(value='Maganjo') MAGANJO Branch
-                        option(value='Matugga') MATUGGA Branch
-                    .align
-                      label.form-label Supplier Name:
-                      input(type='text' name='customername' placeholder='*Customer Name ' value=user.customername)
-                      .invalid-feedback
-                        | Enter a valid Customer name.
-                    .align
-                      label.form-label Phone Contact:
-                      input(type='text' name='telno' placeholder='* Telephone no.' value=user.telno)
-                      .invalid-feedback
-                        | Please enter a valid telephone number.
-                    .align
-                      label.form-label Product:
-                      select(name='pdct' )
-                        option(value=user.pdct)
-                          | Agricultural Product
-                        option(value='Beans') Beans
-                        option(value='Maize') Maize
-                        option(value='Cow_Peas') Cow Peas
-                        option(value='Beans') Beans
-                        option(value='Maize') Maize
-                        option(value='Others') Others
-                    div
-                      label.form-label(for='start') Purchase Date:
-                      input(type='date' name='date' min='1960-01-01' max='2100-12-31' value=user.date)
-                      .invalid-feedback
-                        | Please enter a valid date.
-                  .col.col-md-6
-                    div
-                      .align
-                        label.form-label
-                          | Unit price
-                          | (shs):
-                        input#unitprice(type='text' name='unitprice' placeholder='*Unit Price /kg (shs).'   oninput='add_number()' value=user.unitprice)
-                        .invalid-feedback
-                          | Please enter a valid unit price.
-                    .align
-                      label.form-label
-                        | Qty,
-                        | Tonnes(1000kg):
-                      input#qty(type='text' name='quantity' placeholder='*Qty in Tonnes.'  oninput='add_number()' value=user.quantity)
-                      .invalid-feedback
-                        | Please enter a Quantity in tonnnes.
-                    .align
-                      label.form-label Total Amount (shs):
-                      input#txtresult(type='text' name='total' placeholder='*Amount(shs).' value=user.total)
-                    .align
-                      label.form-label  Purchase Type:
-                      select(name='sale_type' )
-                        option(value=user.sale_type)
-                          | Purchase type
-                        option(value='Cash') Cash
-                        option(value='Credit') Credit
-                      .invalid-feedback
-                        | Please enter a Purchase type
-                    .align
-                      label.form-label Comments:
-                      textarea#comments(type='text' name='comments' placeholder='*Comments on Purchase.' rows='5' cols='33' value=user.comments)
-                      .invalid-feedback
-                        | Please enter a valid comment
-                  .col.col-md-12
-                    button.custom(style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
-                      | Confirm
-                      | Update
+              | Update Customer Sales Records
+            .table-responsive(style='padding:20px;')
+              table.table.table-bordered.table-hover.table-secondary
+                thead
+                  tr
+                    th Branch
+                    th Customer                   
+                    th Product                   
+                    th Qty,tonnes
+                    th Sale
+                    th Total (shs)
+                    th Comments
+                    th Delete
+                    th Edit
+                tbody(style='overflow-y: scroll;')
+                if users.length
+                  each user in users
+                    tr
+                      td #{user.branch}
+                      td #{user.customername}                      
+                      td #{user.pdct}                                             
+                      td #{user.quantity}
+                      td #{user.sale_type}
+                      td #{user.total} 
+                      td  #{user.comments}
+                      td
+                        form.delete(method="post" action='/creditsaleslist/delete')
+                          input(type="hidden", placeholder="", name="id", value=user._id)
+                          button(type="submit") Delete 
+                      td
+                        form(action="/creditsaleslist/edit/"+user._id)
+                          input(type="hidden")
+                          button(type="submit") Edit
+            .col.col-md-12              
+              a.btn.custom( href="/creditsaleslist" style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
+                | Credit Records                                                                                                                            
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
@@ -174,7 +134,7 @@ footer.page-footer.font-small.blue.pt-4
       .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
-script(src='/js/sales.js')
+script(src='js/sales.js')
 // jQuery CDN - Slim version (=without AJAX)
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 // Popper.JS
