--- a/views/creditsales.pug
+++ b/views/creditsales.pug
@@ -3,12 +3,11 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  title Karibu Groceries Ltd/purchases
+  title Karibu Groceries Ltd.
   // Bootstrap CSS CDN
+  //link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css' integrity='sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4' crossorigin='anonymous')
   link(href='/css/bootstrap/css/bootstrap.min.css' rel='stylesheet')
-  
-  //link (rel='stylesheet' href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous")
-  //Our Custom CSS
+  // Our Custom CSS
   link(rel='stylesheet' href='/css/style5.css')
   // Font Awesome JS
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/solid.js' integrity='sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ' crossorigin='anonymous')
@@ -64,8 +63,8 @@ head
         a(href='/account')
           i.fas.fa-user
           |                         Account
-    ul.list-unstyled.CTAs     
-  // Page Content
+    ul.list-unstyled.CTAs      
+  // Page Content  
   #content
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
       .container-fluid.row
@@ -77,7 +76,7 @@ head
               i.fas.fa-align-justify
           .col-md-10
             h2(style='margin-left:15px;margin-top: 20px; color:#181553;')
-              | Karibu Groceries Ltd, PRODUCT
+              | Karibu Groceries Ltd, CREDIT
               | SALES FORM
         #navbarSupportedContent.collapse.navbar-collapse.col-md-1
           ul.nav.navbar-nav.ml-auto
@@ -89,32 +88,32 @@ head
         .col-md-12
           .main.custom1
             h2.txt1(style='font-size:45px;text-decoration: underline;')
-              | Update Customer Sales Form
+              | Customer Credit Sales Form.
             .signup
-              form(method="POST" action="/saleslist/edit?id="+user._id )
+              form.needs-validation(name='registration' novalidate='' action="/creditsales" method="POST")
                 .row(onsubmit='')
                   .col.col-md-6
                     .align
                       label.form-label KGL Branch:
-                      select(name='branch' )
-                        option(value=user.branch)
+                      select(name='branch' onblur='branch()')
+                        option(value='Default')
                           | KGL Branch
                         option(value='Maganjo') MAGANJO Branch
                         option(value='Matugga') MATUGGA Branch
                     .align
                       label.form-label Customer Name:
-                      input(type='text' name='customername' placeholder='*Customer Name ' value=user.customername)
+                      input(type='text' name='customername' placeholder='*Customer Name ' required='' size='32' onblur='cname()')
                       .invalid-feedback
                         | Enter a valid Customer name.
                     .align
                       label.form-label Phone Contact:
-                      input(type='text' name='telno' placeholder='* Telephone no.' value=user.telno)
+                      input(type='text' name='telno' placeholder='* Telephone no.' required='' onblur='tel()')
                       .invalid-feedback
                         | Please enter a valid telephone number.
                     .align
                       label.form-label Product:
-                      select(name='pdct' )
-                        option(value=user.pdct)
+                      select(name='pdct' onblur='pdt()')
+                        option(value='Default')
                           | Agricultural Product
                         option(value='Beans') Beans
                         option(value='Maize') Maize
@@ -124,7 +123,7 @@ head
                         option(value='Others') Others
                     div
                       label.form-label(for='start') Purchase Date:
-                      input(type='date' name='date' min='1960-01-01' max='2100-12-31' value=user.date)
+                      input(type='date' name='date' value='' min='1960-01-01' max='2100-12-31' onblur='dte()')
                       .invalid-feedback
                         | Please enter a valid date.
                   .col.col-md-6
@@ -133,37 +132,35 @@ head
                         label.form-label
                           | Unit price
                           | (shs):
-                        input#unitprice(type='text' name='unitprice' placeholder='*Unit Price /kg (shs).'   oninput='add_number()' value=user.unitprice)
+                        input#unitprice(type='text' name='unitprice' placeholder='*Unit Price /kg (shs).' required='' size='12' onblur='add2()' oninput='add_number()')
                         .invalid-feedback
                           | Please enter a valid unit price.
                     .align
                       label.form-label
                         | Qty,
                         | Tonnes(1000kg):
-                      input#qty(type='text' name='quantity' placeholder='*Qty in Tonnes.'  oninput='add_number()' value=user.quantity)
+                      input#qty(type='text' name='quantity' placeholder='*Qty in Tonnes.' required='' oninput='add_number()' onblur='add1()')
                       .invalid-feedback
                         | Please enter a Quantity in tonnnes.
                     .align
                       label.form-label Total Amount (shs):
-                      input#txtresult(type='text' name='total' placeholder='*Amount(shs).' value=user.total)
+                      input#txtresult(type='text' name='total' placeholder='*Amount(shs).' )
                     .align
                       label.form-label  Sale Type:
-                      select(name='sale_type' )
-                        option(value=user.sale_type)
-                          | Sale type.
-                        option(value='Cash') Cash
-                        option(value='Credit') Credit
+                      select(name='sale_type' onblur='sales()')
+                        option(value='Credit')
+                          | Credit                                              
                       .invalid-feedback
                         | Please enter a sale type
                     .align
                       label.form-label Comments:
-                      textarea#comments(type='text' name='comments' placeholder='*Comments on Sale.' rows='5' cols='33' value=user.comments)
+                      textarea#comments(type='text' name='comments' placeholder='*Comments on Sale.' rows='5' cols='33')
                       .invalid-feedback
                         | Please enter a valid comment
                   .col.col-md-12
                     button.custom(style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
                       | Confirm
-                      | Update
+                      | Sale
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
@@ -173,7 +170,7 @@ footer.page-footer.font-small.blue.pt-4
       .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
-// jQuery CDN - Slim version (=without AJAX)
+  // jQuery CDN - Slim version (=without AJAX)
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 // Popper.JS
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
