--- a/views/editprice.pug
+++ b/views/editprice.pug
@@ -7,7 +7,7 @@ head
   // Bootstrap CSS CDN
   link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css' integrity='sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4' crossorigin='anonymous')
   // Our Custom CSS
-  link(rel='stylesheet' href='css/style6.css')
+  link(rel='stylesheet' href='/css/style6.css')
   // Font Awesome JS
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/solid.js' integrity='sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ' crossorigin='anonymous')
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js' integrity='sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY' crossorigin='anonymous')
@@ -40,9 +40,13 @@ head
           li
             a(href='/sales') Sales Form
           li
+            a(href='/creditsales') Credit Sales Form 
+          li
             a(href='/saleslist') Sales Record
-      li.active        
-        a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
+          li
+            a(href='/creditsaleslist') Credit Record
+      li        
+        a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
           |                           Farm
         ul#farmSubmenu.collapse.list-unstyled
@@ -50,8 +54,8 @@ head
             a(href='/farm') Farm Form
           li
             a(href='/farmlist') Farm Record          
-      li
-        a(href='/prices')
+      li.active
+        a(href='/prices' style='color:#181553')
           i.fas.fa-briefcase
           |                         Prices      
       li
@@ -70,7 +74,7 @@ head
             button.btn.btn-dark.d-inline-block.d-lg-none.ml-auto(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
               i.fas.fa-align-justify
           .col-md-10
-            h2(style='margin-left:15px;margin-top: 20px;color: #181553;') Karibu Groceries Ltd, FARM PRODUCT. 
+            h2(style='margin-left:15px;margin-top: 20px;color: #181553;') Karibu Groceries Ltd, PRICE RECORD. 
         #navbarSupportedContent.collapse.navbar-collapse.col-md-1
           ul.nav.navbar-nav.ml-auto
             li.nav-item.active
@@ -83,42 +87,39 @@ head
         .col-md-12
           .main.custom1
             h2.txt1(style='font-size:45px;text-decoration: underline;')
-              | Local Farm Produce
+              | Price Record
               | Form
             .signup
-              form(name='registration')
+              form( method="POST" action="/prices/edit?id="+user._id)
                 .row
                   .col.col-md-10
                     ul
                       li.align
                         label KGL Branch:
-                        select(name='urole' onblur='role()' required='')
-                          option(value='Default')
+                        select(name='userole' )
+                          option(value=user.userole)
                             | KGL Branch
-                          option(value='mg') MAGANJO Branch
-                          option(value='ma') MATUGGA Branch
+                          option(value='Maganjo') MAGANJO Branch
+                          option(value='Matugga') MATUGGA Branch
                       li.align
                         label Agricultural Product:
-                        select(name='pdct' onblur='role1()' required='')
-                          option(value='Default')
+                        select(name='pdct' )
+                          option(value=user.pdct)
                             | Product Name
-                          option(value='sa') Beans
-                          option(value='ma') Maize
-                          option(value='dr') Cow Peas
-                          option(value='sa') Beans
-                          option(value='ma') Maize
-                          option(value='ot') Others
-                      li
-                        label(for='start') Purchase Date:
-                        input(type='date' name='pdte' value='' min='1960-01-01' required='' max='2100-12-31' onblur='dte()')
+                          option(value='Beans') Beans
+                          option(value='Maize') Maize
+                          option(value='Cow_peas') Cow Peas
+                          option(value='Beans') Beans
+                          option(value='Maize') Maize
+                          option(value='Others') Others
                       li.align
-                        label Qty, Tonnes(1000kg):
-                        input#qty(type='text' name='quantity' placeholder='*Quantity in Tonnes.(1000kgs)' required='' onblur='add1()' oninput='add_number()')
+                        label Price (shs):
+                        input#qty(type='text' name='quantity' placeholder='*Price per Kg' value=user.quantity)
                       li.align
                         label Comments:
-                        textarea#comments(type='text' name='comments' placeholder='*Comments on Agricultural Produce.' rows='5' cols='33')
+                        input#comments(type='text' name='comments' placeholder='*Comments on Price.' rows='5' cols='33' value=user.comments)
                   button.custom(style='width: 40%;\
-                  height:50px;') Confirm Stock
+                  height:50px;' type="submit") Confirm Price
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
@@ -128,7 +129,6 @@ footer.page-footer.font-small.blue.pt-4
       .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
-
 // jQuery CDN - Slim version (=without AJAX)
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 // Popper.JS
