--- a/views/salesrecordupdate.pug
+++ b/views/salesrecordupdate.pug
@@ -43,7 +43,11 @@ head
           li
             a(href='/sales') Sales Form
           li
+            a(href='/creditsales') Credit Sales Form 
+          li
             a(href='/saleslist') Sales Record
+          li
+            a(href='/creditsaleslist') Credit Record
       li        
         a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
