--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -203,7 +203,7 @@ button {
   background: #1004ff;
 }
 .custom:hover {
-  background: #0ada0a;
+  background: #00ff00;
 }
 .login label {
   color: #27056b;
