--- a/views/index.pug
+++ b/views/index.pug
@@ -32,7 +32,7 @@ head
           img.card-img-top.d-none.d-md-block(src='/Img/logo5.jpg' style='width:auto; height:auto; 	\
           box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 100px;margin-top: 40px;' alt='Me In Class on Day on3')
       .col.col-md-5
-        .main(style=' background-color: #16494b')
+        .main(style=' background-color: #081b4b')
           // <input type="checkbox" id="chk" aria-hidden="true">
           .signup
             form(action='/login' method='POST')
