--- a/public/css/style11.css
+++ b/public/css/style11.css
@@ -57,8 +57,8 @@ span {
 }
 
 #sidebar {
-  min-width: 250px;
-  max-width: 250px;
+  min-width: 200px;
+  max-width: 200px;
   background: #07026d;
   color: #fff;
   transition: all 0.3s;
@@ -184,7 +184,7 @@ a[data-toggle="collapse"] {
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #07026d;
+  background: #181553;
 }
 
 ul.CTAs {
@@ -298,16 +298,13 @@ a.article:hover {
   font-size: 20px;
   font-family: "Times New Roman", Times, serif;
 }
-.tx{
-  color: #ffffff;
-}
 
 ul {
   list-style: none;
 }
 .main {
-  width: 1030px;
-  height: 580px;
+  width: 1070px;
+  height: 450px;
   overflow: hidden;
   background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38")
     no-repeat center/ cover;
@@ -319,7 +316,7 @@ ul {
 }
 .custom1 {
   background-color: #dfdfdf;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 
 }
 /* .custom1:hover {
@@ -394,14 +391,14 @@ a {
   text-decoration: none;
 }
 button {
-  /* margin: 10px auto; */
+  margin: 10px auto;
   justify-content: center;
   display: block;
   color: #fff;
   background:#07026d;
   font-size: 1em;
   font-weight: bold;
-  /* margin-top: 20px; */
+  margin-top: 20px;
   outline: none;
   border: none;
   border-radius: 5px;
@@ -410,41 +407,22 @@ button {
   /* box-shadow: 10px 25px 55px rgba(0, 0, 0, 0.644); */
 }
 
-.custom{
-  justify-content: center;
-  display: block;
-  color: rgb(255, 255, 255);
-  background:#07026d;
-  font-size: 1em;
-  font-weight: bold;
-  /* margin-top: 20px; */
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  transition: 0.2s ease-in;
-  cursor: pointer;
-}
 .custom:hover {
-  color: #fff;
   background: #0ada0a;
   box-shadow: 10px 25px 55px rgba(0, 0, 0, 0.644);
 }
-.cst{
-  color:#ffffff;
-}
+
 
 
 /* table {
-  border: 3px solid #181553;
+  width: auto;
+   display:block; 
  } */
 thead { 
    /* display: none;  */
    width: auto;
   height: auto;
-  color: #181553; 
-  border: 3px solid #181553;
-  border-radius: 20px;
-  
+  color: #181553;  
 }
  tbody {
     color: #181553;  
@@ -453,16 +431,38 @@ thead {
   width: auto;
   overflow-y: scroll;
   overflow-x: hidden;
-  text-align: justify;
-  /* border-color: #181553; */
-  border: 1px solid #181553;
-}  
+  text-align: center;
+} 
 th{
-  width: 70px;
+  width:40px;
 } 
 
-select{
-  
-  max-width: 200px;
-  text-align: center;
+.card {
+  float:center;
+  width:250px;
+  height:250px;
+  display:block;
+  margin-top: 15px;
+  margin-left:40px;
+  border-radius: 30px;
+  box-shadow: 5px 5px #888888;
+  border:1px solid black;
 }
+.card:hover{
+  /* background-color:#888888; */
+  box-shadow: 7px 7px #07026d;
+
+}
+.list-group-item:hover{
+  background-color:#c7c2c2;
+  /* box-shadow: 7px 7px #242323; */
+
+}
+.card-header{
+  background-color:#07026d;
+  color:#ffffff;
+  
+  /* border-radius: 30px; */
+}
+
+
