--- a/views/accounts.pug
+++ b/views/accounts.pug
@@ -26,46 +26,60 @@ head
         a(href='/home')
           i.fas.fa-home
           |                         Home 
-      li        
-        a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
-          i.fas.fa-copy
-          |                           Purchases
-        ul#purchaseSubmenu.collapse.list-unstyled
-          li
-            a(href='/purchases') Purchase Form
-          li            
-            a(href='/purchaselist') Purchase Record           
+      li
+        if user.userrole == "Manager" || user.userrole == "Director"     
+          a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
+            i.fas.fa-copy
+            |                           Purchases
+          ul#purchaseSubmenu.collapse.list-unstyled
+            li
+              a(href='/purchases') Purchase Form
+            li            
+              a(href='/purchaselist') Purchase Record           
       li    
-        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' )
+        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false')
           i.fas.fa-copy
           |                           Sales
         ul#saleSubmenu.collapse.list-unstyled
           li
             a(href='/sales') Sales Form
+          li               
+            a(href='/creditsales') Credit Sales Form 
           li
-            a(href='/creditsales') Credit Sales Form
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/saleslist') Sales Record
           li
-            a(href='/saleslist') Sales Record
-          li
-            a(href='/creditsaleslist') Credit Record
-      li        
-        a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
-          i.fas.fa-copy
-          |                           Farm
-        ul#farmSubmenu.collapse.list-unstyled
-          li
-            a(href='/farm') Farm Form
-          li
-            a(href='/farmlist') Farm Record          
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/creditsaleslist') Credit Record
+      li
+        if user.userrole == "Manager" || user.userrole == "Director"
+          a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
+            i.fas.fa-copy
+            |                           Farm
+          ul#farmSubmenu.collapse.list-unstyled
+            li
+              a(href='/farm') Farm Form
+            li
+              a(href='/farmlist') Farm Record          
       li
         a(href='/prices')
           i.fas.fa-briefcase
           |                         Prices      
-      li.active
-        a(href='/account' style='color:#181553')
+      li.active    
+        a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
           i.fas.fa-user
-          |                         Account
-    ul.list-unstyled.CTAs  
+          |                           Account
+        ul#accountSubmenu.collapse.list-unstyled
+          li
+            a(href='/account') Account
+          li
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/register') Register
+          li
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/employeelist') Employees
+    ul.list-unstyled.CTAs      
+  
   // Page Content
   #content
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
@@ -91,51 +105,42 @@ head
               | Personal Account
               | Details
             .signup
-              form(name='registration' novalidate='')
+              form
                 .row(onsubmit='')
                   .col.col-md-6
                     ul
                       li.align
                         label First Name:
-                        input#fname(type='text' name='fname' placeholder='* First Name ' disabled='')
+                        input#fname(type='text' name='firstname' value=user.firstname)
                       li.align
                         label Second Name:
-                        input#sname(type='text' name='sname' placeholder='* Second Name' disabled='')
+                        input#sname(type='text' name='secondname' value=user.secondname)
                       li.align
                         label Gender:
-                        input(type='text' name='gender' placeholder='*Male / Female' disabled='')
+                        input(type='text' name='gender' value=user.gender)
                       li.align
                         label National ID Number:
-                        input#nin(type='text' name='userid2' placeholder='*NIN' disabled='')
+                        input#nin(type='text' name='nin' value=user.nin)
                       li.align
                         label E-mail:
-                        input(type='email' name='email' placeholder='* Email-address' disabled='')
+                        input(type='email' name='email' value=user.email)
                       li.align
                         label User role:
-                        input#usrole(type='text' name='userole' placeholder='* User Role' disabled='')
+                        input#usrole(type='text' name='userrole' value=user.userrole)
                   .col.col-md-6
                     ul
                       li.align
                         label Username
-                        input(type='text' name='usrname' placeholder='* User name' disabled='')
+                        input(type='text' name='username' value=user.username)
                       li.align
                         label Tel.
-                        input(type='text' placeholder='* Telephone no.' disabled='' name='telno')
+                        input(type='text' value=user.telno name='telno')
                       li.align
                         label Branch
-                        input(type='text' required='' placeholder='*Branch name' name='branch' disabled='')
+                        input(type='text'  name='branch' value=user.branch)
                       li.align
                         label Password
-                        input(type='password' placeholder='* Password' name='passid')
-                      li.align
-                        button.custom(style='width: 40%; float:center;\
-                        height:50px;') Update details
-                  //
-                    <div class="  col col-md-12"><button
-                    style="width: 40%;margin-top: 0px;height:50px;" type="submit"
-                    class="custom">Confirm
-                    Sale</button>
-                    </div>
+                        input(type='password' value=user.password name='password')           
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
