--- a/views/editemployee.pug
+++ b/views/editemployee.pug
@@ -3,13 +3,14 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  title Karibu Groceries Ltd/purchases
+  title Karibu Groceries Ltd/Employee Account
   // Bootstrap CSS CDN
   link(href='/css/bootstrap/css/bootstrap.min.css' rel='stylesheet')
   //
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     Our Custom CSS
+  //link(href='/css/signup.css' rel='stylesheet' type='text/css')
   link(rel='stylesheet' href='/css/style5.css')
   // Font Awesome JS
   script(defer='' src='https://use.fontawesome.com/releases/v5.0.13/js/solid.js' integrity='sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ' crossorigin='anonymous')
@@ -36,8 +37,8 @@ head
               a(href='/purchases') Purchase Form
             li            
               a(href='/purchaselist') Purchase Record           
-      li.active     
-        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
+      li    
+        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false')
           i.fas.fa-copy
           |                           Sales
         ul#saleSubmenu.collapse.list-unstyled
@@ -65,8 +66,8 @@ head
         a(href='/prices')
           i.fas.fa-briefcase
           |                         Prices      
-      li     
-        a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' )
+      li.active    
+        a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
           i.fas.fa-user
           |                           Account
         ul#accountSubmenu.collapse.list-unstyled
@@ -79,83 +80,87 @@ head
             if user.userrole == "Manager" || user.userrole == "Director"
               a(href='/employeelist') Employees
     ul.list-unstyled.CTAs      
-   
+  
   // Page Content
-  #content
+  #content 
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
-      .container-fluid.row
-        .col-md-11.row
-          .col-md-1
-            button#sidebarCollapse.btn.btn-primary(type='button' style='background:#181553')
-              i.fas.fa-align-left
-            button.btn.btn-dark.d-inline-block.d-lg-none.ml-auto(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
-              i.fas.fa-align-justify
-          .col-md-10
-            h2(style='margin-left:15px;margin-top: 20px; color:#181553;') Karibu Groceries Ltd, Sales Records
-        #navbarSupportedContent.collapse.navbar-collapse.col-md-1
-          ul.nav.navbar-nav.ml-auto
-            li.nav-item.active
-              button.btn.btn-outline-primary
-                a.nav-link(href='/logout' style='color:#181553;  ') LogOut
-    #blog-container.container-fluid
-      .row
-        .col-md-12
-          .main.custom1
-            h2.txt1(style='font-size:45px;text-decoration: underline;')
-              | Update Customer Sales Records
-            .table-responsive(style='padding:20px;')
-              table.table.table-bordered.table-hover.table-secondary
-                thead
-                  tr
-                    th Branch
-                    th Customer                   
-                    th Product                   
-                    th Qty,tonnes
-                    th Sale
-                    th Total (shs)
-                    th Delete
-                    th Edit
-                tbody(style='overflow-y: scroll;')
-                if users.length
-                  each user in users
-                    tr
-                      td #{user.branch}
-                      td #{user.customername}                      
-                      td #{user.pdct}                                             
-                      td #{user.quantity}
-                      td #{user.sale_type}
-                      td #{user.total} 
-                      td
-                        form.delete(method="post" action='/saleslist/delete')
-                          input(type="hidden", placeholder="", name="id", value=user._id)
-                          button(type="submit") Delete 
-                      td
-                        form(action="/saleslist/edit/"+user._id)
-                          input(type="hidden")
-                          button(type="submit") Edit
-            .col.col-md-12              
-              a.btn.custom( href="/saleslist" style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
-                | Sales Records                                                                                                                            
+        .container-fluid.row
+          .col-md-11.row
+            .col-md-1
+              button#sidebarCollapse.btn.btn-primary(type='button' style='background:#181553')
+                i.fas.fa-align-left
+              button.btn.btn-dark.d-inline-block.d-lg-none.ml-auto(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
+                i.fas.fa-align-justify
+            .col-md-10
+              h2(style='margin-left:15px;margin-top: 20px;color: #181553;') Karibu Groceries Ltd, Register Form. 
+          #navbarSupportedContent.collapse.navbar-collapse.col-md-1
+            ul.nav.navbar-nav.ml-auto
+              li.nav-item.active
+                button.btn.btn-outline-primary
+                  a.nav-link(href='/logout' style='color: #181553; ') LogOut
+      
+    .row
+      .col-md-12
+        .main.custom1
+          h2.txt1(style='text-decoration:underline') Employee Update Form
+          .signup
+            form(method="POST" action="/employeelist/edit?id="+user._id)
+              .row()
+                .col.col-md-6(style='margin-right: 0px; border-right: 0px')
+                  div
+                    .align
+                      label.form-label First Name
+                      input(type='text' name='firstname' value=user.firstname )
+                    .align
+                      label.form-label Second/Name
+                      input(type='text' name='secondname' value=user.secondname )
+                    .align
+                      label.form-label Gender
+                      input(type='text' name='gender' value=user.gender )
+                    .align
+                      label.form-label NIN
+                      input(type='text' name='nin'  value=user.nin)
+                    .align
+                      label.form-label E-mail
+                      input(type='email' name='email' value=user.email)
+                    .align
+                      label.form-label User role
+                       input(type='text' name='userrole' value=user.userrole  )     
+                .col.col-md-6
+                  div
+                    .align
+                      label.form-label Username
+                      input(type='text' name='username'  value=user.username)
+                    .align
+                      label.form-label Telephone no: 
+                      input(type='text' name='telno' value=user.telno )
+                    .align
+                      label.form-label Branch
+                       input(type='text' name='branch' value=user.branch)
+                    .align
+                      label.form-label Password
+                      input(type='password'  name='password' value=user.password )
+                    .align
+                      label.form-label Confirm Password*
+                      input(type='password' name='password1'  onblur='passvalid()' value=user.password1)
+                .col.col-md-12
+                  button.custom.txt2(style='width: 40%; height: 50px;margin-left:300px;' type='submit' ) Confirm Update
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
       .col-md-2.mt-md-0.mt-3
         div
-          img.card-img-top(src='./Img/logo5.jpg' style='width:50px; height:50px; border-radius: 10px;' alt='Me In Class on Day on3')
+          img.card-img-top(src='/Img/logo5.jpg' style='width:50px; height:50px; border-radius: 10px;' alt='Me In Class on Day on3')
       .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
-script(src='js/sales.js')
 // jQuery CDN - Slim version (=without AJAX)
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
 // Popper.JS
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
 // Bootstrap JS
-//
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-  integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-  crossorigin="anonymous"></script>
-script(src='css/bootstrap/js/bootstrap.bundle.min.js')
+script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
+script(src='/js/signup.js')
 script(type='text/javascript').
   $(document).ready(function () {
   $('#sidebarCollapse').on('click', function () {
