--- a/views/editpurchases.pug
+++ b/views/editpurchases.pug
@@ -26,7 +26,8 @@ head
         a(href='/home')
           i.fas.fa-home
           |                         Home 
-      li.active       
+      li.active
+        //if user.userrole == "Manager" || user.userrole == "Director"     
         a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
           i.fas.fa-copy
           |                           Purchases
@@ -42,13 +43,16 @@ head
         ul#saleSubmenu.collapse.list-unstyled
           li
             a(href='/sales') Sales Form
-          li
+          li               
             a(href='/creditsales') Credit Sales Form 
           li
-            a(href='/saleslist') Sales Record
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/saleslist') Sales Record
           li
-            a(href='/creditsaleslist') Credit Record
-      li        
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/creditsaleslist') Credit Record
+      li
+        //if user.userrole == "Manager" || user.userrole == "Director"
         a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
           |                           Farm
@@ -61,11 +65,21 @@ head
         a(href='/prices')
           i.fas.fa-briefcase
           |                         Prices      
-      li
-        a(href='/account')
+      li     
+        a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-user
-          |                         Account
-    ul.list-unstyled.CTAs 
+          |                           Account
+        ul#accountSubmenu.collapse.list-unstyled
+          li
+            a(href='/account') Account
+          li
+            //if user.userrole == "Manager" || user.userrole == "Director" 
+            a(href='/register') Register
+          li
+            //if user.userrole == "Manager" || user.userrole == "Director"
+            a(href='/employeelist') Employees
+    ul.list-unstyled.CTAs      
+  
   // Page Content
   #content
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
