--- a/views/farmrecordupdate.pug
+++ b/views/farmrecordupdate.pug
@@ -25,46 +25,60 @@ head
         a(href='/home')
           i.fas.fa-home
           |                         Home 
-      li        
-        a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
-          i.fas.fa-copy
-          |                           Purchases
-        ul#purchaseSubmenu.collapse.list-unstyled
-          li
-            a(href='/purchases') Purchase Form
-          li            
-            a(href='/purchaselist') Purchase Record           
-      li.active     
-        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
+      li
+        if user.userrole == "Manager" || user.userrole == "Director"     
+          a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
+            i.fas.fa-copy
+            |                           Purchases
+          ul#purchaseSubmenu.collapse.list-unstyled
+            li
+              a(href='/purchases') Purchase Form
+            li            
+              a(href='/purchaselist') Purchase Record           
+      li   
+        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
           |                           Sales
         ul#saleSubmenu.collapse.list-unstyled
           li
             a(href='/sales') Sales Form
-          li
+          li               
             a(href='/creditsales') Credit Sales Form 
           li
-            a(href='/saleslist') Sales Record
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/saleslist') Sales Record
           li
-            a(href='/creditsaleslist') Credit Record
-      li        
-        a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
-          i.fas.fa-copy
-          |                           Farm
-        ul#farmSubmenu.collapse.list-unstyled
-          li
-            a(href='/farm') Farm Form
-          li
-            a(href='/farmlist') Farm Record          
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/creditsaleslist') Credit Record
+      li.active
+        if user.userrole == "Manager" || user.userrole == "Director"
+          a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553' )
+            i.fas.fa-copy
+            |                           Farm
+          ul#farmSubmenu.collapse.list-unstyled
+            li
+              a(href='/farm') Farm Form
+            li
+              a(href='/farmlist') Farm Record          
       li
         a(href='/prices')
           i.fas.fa-briefcase
           |                         Prices      
-      li
-        a(href='/account')
+      li     
+        a.dropdown-toggle(href='#accountSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-user
-          |                         Account
-    ul.list-unstyled.CTAs   
+          |                           Account
+        ul#accountSubmenu.collapse.list-unstyled
+          li
+            a(href='/account') Account
+          li
+            if user.userrole == "Manager" || user.userrole == "Director" 
+              a(href='/register') Register
+          li
+            if user.userrole == "Manager" || user.userrole == "Director"
+              a(href='/employeelist') Employees
+    ul.list-unstyled.CTAs      
+  
   #content
     nav.navbar.navbar-expand-lg.navbar-light(style='background:#efeef0')
       .container-fluid.row
@@ -105,7 +119,7 @@ head
                       td #{user.userole}
                       td #{user.pdct}                                                                  
                       td #{user.quantity}
-                      td #{user.date.toLocaleDateString()}
+                      td #{user.date}
                       td #{user.comments}
                       td
                         form.delete(method="post" action='/farmlist/delete')
