--- a/views/editprice.pug
+++ b/views/editprice.pug
@@ -128,7 +128,7 @@ head
                           option(value='Others') Others
                       li.align
                         label Price (shs):
-                        input#qty(type='text' name='quantity' placeholder='*Price per Kg' value=user.quantity)
+                        input#qty(type='Number' name='quantity' placeholder='*Price per Kg' value=user.quantity)
                       li.align
                         label Comments:
                         input#comments(type='text' name='comments' placeholder='*Comments on Price.' rows='5' cols='33' value=user.comments)
